# STM32_Linux_bootloader

./: .gitignore  README.md
Bootloader_MCU/: .mxproject  Bootloader.ioc  Makefile
Bootloader_MCU/Core/Src/: main.c  system_stm32f4xx.c
Bootloader_MCU/User_code/: flash_loader.c  flash_loader.h  jump_addr.c  jump_addr.h  parser_cmd.c  parser_cmd.h  work_with_flash.c  work_with_flash.h
Bootloader_RPi/: CMakeLists.txt  README.MD  buildANDrun.sh  main.c
Bootloader_RPi/TestHexes/: FirmwareBlink.hex
Bootloader_RPi/inc/: parser.h  uart_RPi.h
Bootloader_RPi/src/: parser.c  uart_RPi.c
Docs/: Boot_scheme.dia
